--- a/teaching.html
+++ b/teaching.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="author" content="Sandi Ljubic" />
 <meta name="description" content="Personal webpage of Sandi Ljubic" />
 <meta name="keywords" content="riteh, fer, website, sandi ljubic, research" />
@@ -306,7 +306,7 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			<em>2003-2007</em>			
 			</p>
 			<ul style="list-style-type: disc;">
-				<li>Semiconductors: P-type; N-type; Drift and diffusion. Semiconductor devices: diodes – polarization,
+				<li>Semiconductors: P-type; N-type; Drift and diffusion. Semiconductor devices: diodes &#8211; polarization,
 				types and applications; bipolar junction and field effect transistors - modes of operation, parameters,
 				characteristics and models. Bipolar junction transistor and field effect transistor amplifiers: DC and
 				AC signal analysis. Differential amplifier. Operational amplifier. Operational amplifier circuits. Signal
