--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,8 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 <!-- toolstrip support -->
 <link rel="stylesheet" type="text/css" href="css/tooltipster.css" />
 <link rel="stylesheet" type="text/css" href="css/tooltipster-light.css" />
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script>
+<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.0.min.js"></script> -->
+<script type="text/javascript" src="js/jquery-1.7.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.tooltipster.min.js"></script>
 <script>
         $(document).ready(function() {
