Free template broken link

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 		
 	<div style="width:300px; text-align:right; margin-left:20px;">
 		<p>
-		Design: 
-		<a target="_blank" href="http://www.premiumfreebies.eu/web-templates/minifolio-free-template/">
-			MiniFolio free template
-		</a>
+		Design: MiniFolio free template 
+		<!--<a target="_blank" href="http://www.premiumfreebies.eu/web-templates/minifolio-free-template/">
+			
+		</a>-->
 		</p>
 	</div>
     
