--- a/publications.html
+++ b/publications.html
@@ -166,6 +166,26 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			<ul style="list-style-type: disc;">
 			
 		
+				<li>A. Bonello, E. Francalanza, J.P. Zammit, A. Maffei, F. Enoksson, E. Boffa, F. Pirola, G. Pezzotta, <br />
+					R. Sala, P.C. Priarone, D. Antonelli, P. Minetola, <strong>S. Ljubic</strong>, A. Skoki, P. Podr&#382;aj, T. &#381;u&#382;ek:<br/>
+					<em>Development of an Agile Blended Learning Framework for Engineering Higher Educational Instutions post Covid-19.</em><br/>
+					In: Proc. 33rd International Electrotechnical and Computer Science Conference (ERK 2024)<br />
+					IEEE Slovenia (2024), pp. 644-647. </br>
+						<ul style="list-style-type: circle;">
+						<li> 
+							<a href="#" onclick="return false;" class="ketchup tooltip" 
+										title="<strong>Development of an Agile Blended Learning Framework for Engineering Higher Educational Instutions post  Covid-19.</strong><br/><br/>
+										The incessant demand for the use of online tools in education and industry may strain the resiliency of Higher Education Institutes (HEIs) in terms of resource availability, employment; and assurance of access. These factors, combined with the need for HEIs to be agile in adapting to the new normality, are worth investigating following Covid-19. This entails comprehending the influence of the pandemic on the learning experience and the relevance of blended learning (BL) during Covid-19. This research work contributes a framework (ABL-HEIs) focusing on the agility, resilience, and readiness of HEIs to adopt BL in a post-Covid dynamic, adopting a case study of Faculties of Engineering in six European universities. The framework contributes a knowledge transfer roadmap through which an ABL-Resilience Index can be pursued. The majority of universities involved showed higher agility in the first year of the pandemic (2019-2020). In Phase 2 (2020-2021) most of the universities showed a similar level of resilience present between the universities.">
+								abstract
+							</a>
+							|
+							<a href="https://erk.fe.uni-lj.si/2024/program.php" target="_blank">web</a> 	
+						</li>
+						</ul>
+				</li>
+			
+			
+		
 				<li><strong>S. Ljubic</strong>, A. Skoki, F. Hr&#382;ic, A. Salkanovic:<br/>
 					<em>Automated Online Assessment and Cloud-Based Programming: Advancing Computer Engineering Education.</em><br/>
 					In: Proc. 5th International Conference on Higher Education Learning Methodologies and Technologies Online (HELMeTO 2023)<br/> 
