--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
                  
 				<div class="pages_post_descr">
 					<div class="pages_post_descr_main">
-						Associate Professor
+						Professor
 						<br>
 						<a href="http://www.riteh.uniri.hr/ustroj/zavodi/zr/" target="_blank">Department of Computer Engineering</a>
 						<br>
