--- a/publications.html
+++ b/publications.html
@@ -165,6 +165,25 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 		
 			<ul style="list-style-type: disc;">
 			
+			
+			
+				<li>A. Salkanovic, D. Bačnar, D. Su&#353anj, <strong>S. Ljubic</strong>:<br/>
+					<em>A Sensor-Fusion-Based Experimental Apparatus for Collecting Touchscreen Handwriting Biometric Features.</em><br/>
+					Applied Sciences 2024, 14(23), 11234, pp. 1-30.<br/>
+						<ul style="list-style-type: circle;">
+						<li> 
+							<a href="#" onclick="return false;" class="ketchup tooltip" 
+										title="<strong>A Sensor-Fusion-Based Experimental Apparatus for Collecting Touchscreen Handwriting Biometric Features</strong><br/><br/>
+												Using biometric data for user authentication is a frequently addressed subject within the context of computer security. Despite significant advancements in technology, handwriting analysis continues to be the most common method of identifying individuals. There are two distinct types of handwriting recognition: offline and online. The first type involves the identification and interpretation of handwritten content obtained from an image, such as digitized human handwriting. The latter pertains to the identification of handwriting derived from digital writing performed on a touchpad or touchscreen. This research paper provides a comprehensive overview of the proposed apparatus specifically developed for collecting handwritten data. The acquisition of biometric information is conducted using a touchscreen device equipped with a variety of integrated and external sensors. In addition to acquiring signatures, the sensor-fusion-based configuration accumulates handwritten phrases, words, and individual letters to facilitate online user authentication. The proposed system can collect an extensive array of data. Specifically, it is possible to capture data related to stylus pressure, magnetometer readings, images, videos, and audio signals associated with handwriting executed on a tablet device. The study incorporates instances of gathered records, providing a graphical representation of the variation in handwriting among distinct users. The data obtained were additionally analyzed with regard to inter-person variability, intra-person variability, and classification potential. Initial findings from a limited sample of users demonstrate favorable results, intending to gather data from a more extensive user base.">
+								abstract
+							</a>
+							|
+							<a href="https://doi.org/10.3390/app142311234" target="_blank">doi</a> 
+						</li>
+						</ul>
+				</li>
+			
+			
 		
 				<li>A. Bonello, E. Francalanza, J.P. Zammit, A. Maffei, F. Enoksson, E. Boffa, F. Pirola, G. Pezzotta, <br />
 					R. Sala, P.C. Priarone, D. Antonelli, P. Minetola, <strong>S. Ljubic</strong>, A. Skoki, P. Podr&#382;aj, T. &#381;u&#382;ek:<br/>
