Research page updated

--- a/research.html
+++ b/research.html
@@ -259,6 +259,36 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 		<h2>Projects</h2>
 			<p></p>
 			
+			<p><strong>TAI: Teaching Artificial Intelligence </strong><br/>
+			<a href="https://tai-erasmus.eu/" target="_blank"> Website </a><br/>
+			
+					ERASMUS+ 2024-1-SI01-KA220-HED-000252673
+					(EU) <br/>
+			Position: Local coordinator, researcher <br/>
+			<em>2024-2027</em>			
+			</p>
+			
+			<p><strong>TRAINEE: Advanced MR Training foR HumAn-Centric ProductIon EmpoweriNg Engineering TalEnt </strong><br/>
+			<a href="https://trainee-erasmus.eu/" target="_blank"> Website </a><br/>
+			
+					ERASMUS+ 2024-1-MT01-KA220-HED-000246701
+					(EU) <br/>
+			Position: Local coordinator, researcher <br/>
+			<em>2024-2027</em>			
+			</p>
+			
+			<p><strong>Sensor-fusion-based Analysis of Biometric Features of Touchscreen Handwriting and Signatures </strong><br/>
+			uniri-iskusni-tehnic-23-120 (UNIRI) <br/>
+			Position: PI, researcher <br/>
+			<em>2024-2025</em>			
+			</p>
+			
+			<p><strong>Storage and visualization of biomedical optics data </strong><br/>
+					Bilateral Croatian-Slovenian project (MZOM) <br/>
+			Position: Local PI, researcher <br/>
+			<em>2023-2025</em>			
+			</p>
+			
 			<p><strong>BLISS: Blended Learning Implementation for reSilient, acceSsible and efficient higher education </strong><br/>
 			<a href="https://bliss-erasmus.eu/" target="_blank"> Website </a><br/>
 			Project poster: <a href="docs/bliss.pdf" target="_blank">
@@ -275,6 +305,13 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			<em>2022-2025</em>			
 			</p>
 			
+			
+		
+		
+		
+		<h2>Previous projects</h2>
+		
+			<p></p>
 			<p><strong>Adria Smart Room </strong><br/>
 			<a href="http://www.riteh.uniri.hr/znanost/istrazivanje-i-projekti/adria-smart-room/" target="_blank"> Website </a><br/>
 			Project:  IRI-2 HAMAG-BICRO KK.01.2.1.02.0303 (EU) <br/>
@@ -297,13 +334,10 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 					</a> (UNIRI) <br/>
 			Project coordinator: Dr. Ivan Stajduhar <br/>
 			Position: Researcher, associate <br/>
-			<em>2019-2022</em>			
+			<em>2019-2023</em>			
 			</p>
 		
 		
-		
-		<h2>Previous projects</h2>
-			<p></p>
 			<p><strong>ICCT: Interactive Course for Control Theory </strong><br/>
 			<a href="https://erasmus-plus.ec.europa.eu/projects/search/details/2018-1-SI01-KA203-047081" target="_blank"> Erasmus+ Website </a><br/>
 
