--- a/publications.html
+++ b/publications.html
@@ -167,6 +167,24 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			
 			
 			
+				<li>A. Skoki, S. Ivic, <strong>S. Ljubic</strong>, J. Lerga, I. &#352;tajduhar:<br/>
+					<em>Enhancing Biophysical Muscle Fatigue Model in the Dynamic Context of Soccer.</em><br/>
+					Sensors 2024, 24(24), 8128, pp. 1-13.<br/>
+						<ul style="list-style-type: circle;">
+						<li> 
+							<a href="#" onclick="return false;" class="ketchup tooltip" 
+										title="<strong>Enhancing Biophysical Muscle Fatigue Model in the Dynamic Context of Soccer</strong><br/><br/>
+												In the field of muscle fatigue models (MFMs), the prior research has demonstrated success in fitting data in specific contexts, but it falls short in addressing the diverse efforts and rapid changes in exertion typical of soccer matches. This study builds upon the existing model, aiming to enhance its applicability and robustness to dynamic demand shifts. The objective is to encapsulate the complexities of soccer dynamics with a streamlined set of parameters. Our refined model achieved a slight improvement in the R<sup>2</sup> score in the maximum hand-grip test, increasing from 0.87 to 0.89 compared to the existing model. It also demonstrated dynamic change robustness in a soccer-specific 1 min drill and 15 min treadmill protocol extracted from the literature. Through individualized fitting on a 10-repetition 80 m sprint test for a soccer player, the model exhibited R<sup>2</sup> scores between 0.62 and 0.80. Furthermore, when tested with actual soccer match data, it maintained a robust performance, with the average R<sup>2</sup> scores ranging from 0.70 to 0.72. The proposed approach holds the potential to advance the understanding of tactical decisions by correlating them with real-time physical performance, offering opportunities for more informed strategies and ultimately enhancing team performance.">
+								abstract
+							</a>
+							|
+							<a href="https://doi.org/10.3390/s24248128" target="_blank">doi</a> 
+						</li>
+						</ul>
+				</li>
+			
+			
+			
 				<li>A. Salkanovic, D. Bačnar, D. Su&#353anj, <strong>S. Ljubic</strong>:<br/>
 					<em>A Sensor-Fusion-Based Experimental Apparatus for Collecting Touchscreen Handwriting Biometric Features.</em><br/>
 					Applied Sciences 2024, 14(23), 11234, pp. 1-30.<br/>
