--- a/publications.html
+++ b/publications.html
@@ -1123,8 +1123,9 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 				<li><strong>FedCSIS: Conference on Computer Science and Intelligence Systems<br/>
 							<i>AI4Empowerment: Workshop on Artificial Intelligence for Patient Empowerment with Sensor Systems</i><br/>
 							<i>International Symposium on Advanced Artificial Intelligence in Applications (AAIA)</i></strong><br/>
-							Program Committee member (2022, 2023, 2024)</br>
+							Program Committee member (2022, 2023, 2024, 2025)</br>
 					<ul style="list-style-type: circle;">
+					<li> <a href="https://2025.fedcsis.org/pc" target="_blank">AAIA 2025 Committee</a> </li>
 					<li> <a href="https://2024.fedcsis.org/pc" target="_blank">AAIA 2024 Committee</a> </li>
 					<li> <a href="https://2023.fedcsis.org/pc" target="_blank">AAIA 2023 Committee</a> </li>
 					<li> <a href="https://fedcsis.org/2022/aaia/committee" target="_blank">AAIA 2022 Committee</a> </li>
