--- a/research.html
+++ b/research.html
@@ -259,6 +259,20 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 		<h2>Projects</h2>
 			<p></p>
 			
+			<p><strong>PBMSense - Research and development of innovative products for sustainable and competitive shipping </strong><br/>
+					Ministry of Regional Development and EU Funds (IP.1.1.03.0080)
+					<br/>
+			Position: Researcher <br/>
+			<em>2025-2027</em>			
+			</p>
+			
+			<p><strong>SMART-HOTEL 360 </strong><br/>
+					Ministry of Regional Development and EU Funds (IP.1.1.03.0160)
+					<br/>
+			Position: Researcher <br/>
+			<em>2025-2027</em>			
+			</p>
+			
 			<p><strong>TAI: Teaching Artificial Intelligence </strong><br/>
 			<a href="https://tai-erasmus.eu/" target="_blank"> Website </a><br/>
 			
