Projects and Research topics updated

--- a/publications.html
+++ b/publications.html
@@ -1121,16 +1121,18 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 				</li>
 				
 				<li><strong>ICR: International Conference on Innovations in Computing Research</strong><br/>
-				Organization Committee member (2024, 2025)</br>
+				Organization Committee member (2024, 2025, 2026)</br>
 					<ul style="list-style-type: circle;">
+					<li> <a href="https://iicser.org/icr26/CSE_edu.html" target="_blank">ICR 2026 Program Committee (CSE Education)</a> </li>
 					<li> <a href="https://iicser.org/icr25/CSE_edu.html" target="_blank">ICR 2025 Program Committee (CSE Education)</a> </li>
 					<li> <a href="https://iicser.org/icr24/CSE_edu.html" target="_blank">ICR 2024 Program Committee (CSE Education)</a> </li>
 					</ul>
 				</li>
 				
 				<li><strong>ACR: International Conference on Adavances in Computing Research</strong><br/>
-				Program Committee member (2023, 2024, 2025)</br>
+				Program Committee member (2023, 2024, 2025, 2026)</br>
 					<ul style="list-style-type: circle;">
+					<li> <a href="https://iicser.org/ACR26/organization_com.html" target="_blank">ACR 2026 Organization Committee</a> </li>
 					<li> <a href="https://iicser.org/ACR25/orgnaization_com.html" target="_blank">ACR 2025 Organization Committee</a> </li>
 					<li> <a href="https://iicser.org/ACR24/orgnaization_com.html" target="_blank">ACR 2024 Organization Committee</a> </li>
 					<li> <a href="https://iicser.org/ACR23/orgnaization_com.html" target="_blank">ACR 2023 Organization Committee</a> </li>
