--- a/research.html
+++ b/research.html
@@ -152,8 +152,22 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 		<a name="topics"></a>
 		<h2>Research topics</h2>
 			
-			<div style="margin-top:10px; margin-right:150px">
-				<img src="images/magnets.png" align="right" height="180">
+			<div style="margin-top:10px; margin-right:50px">
+				<img src="images/handwriting.jpg" align="right" height="130">
+			</div>
+			<div>
+			<p><strong>Touchscreen Handwriting Recognition</strong><br/>
+			Prototyping, empirical research, deep learning
+			</p>
+			<ul style="list-style-type: disc;">
+				<li>Utilizing sensor fusion and deep learning for user identification based on dynamic handwriting features.</li>
+			</ul>
+			</div>
+			
+			
+			
+			<div style="margin-top:20px; margin-right:150px">
+				<img src="images/magnets.png" align="right" height="150">
 			</div>
 			<div>
 			<p><strong>Augmenting Around-Device Interaction </strong><br/>
@@ -165,7 +179,7 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			</div>
 			
 			
-			<div style="margin-top:80px; margin-right:65px">
+			<div style="margin-top:50px; margin-right:65px">
 				<img src="images/klm_enhanced.jpg" align="right" height="90">
 			</div>
 			<div>
@@ -296,12 +310,19 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			Position: PI, researcher <br/>
 			<em>2024-2025</em>			
 			</p>
+
+		
+		
+		<h2>Previous projects</h2>
+		
+			<p></p>
 			
 			<p><strong>Storage and visualization of biomedical optics data </strong><br/>
 					Bilateral Croatian-Slovenian project (MZOM) <br/>
 			Position: Local PI, researcher <br/>
 			<em>2023-2025</em>			
 			</p>
+			
 			
 			<p><strong>BLISS: Blended Learning Implementation for reSilient, acceSsible and efficient higher education </strong><br/>
 			<a href="https://bliss-erasmus.eu/" target="_blank"> Website </a><br/>
@@ -312,6 +333,7 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			<em>2022-2025</em>			
 			</p>
 			
+			
 			<p><strong>TSAAI: Traversal Skills on Applied Artificial Intelligence </strong><br/>
 			Project: ERASMUS+ 2021-1-ES01-KA220-HED-000030125 (EU) <br/>
 			Local coordinator: Dr. Ivan Stajduhar <br/>
@@ -320,12 +342,6 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			</p>
 			
 			
-		
-		
-		
-		<h2>Previous projects</h2>
-		
-			<p></p>
 			<p><strong>Adria Smart Room </strong><br/>
 			<a href="http://www.riteh.uniri.hr/znanost/istrazivanje-i-projekti/adria-smart-room/" target="_blank"> Website </a><br/>
 			Project:  IRI-2 HAMAG-BICRO KK.01.2.1.02.0303 (EU) <br/>
