--- a/research.html
+++ b/research.html
@@ -153,7 +153,7 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 		<h2>Research topics</h2>
 			
 			<div style="margin-top:10px; margin-right:50px">
-				<img src="images/handwriting.jpg" align="right" height="130">
+				<img src="images/handwriting.png" align="right" height="130">
 			</div>
 			<div>
 			<p><strong>Touchscreen Handwriting Recognition</strong><br/>
