new conference paper

--- a/publications.html
+++ b/publications.html
@@ -164,6 +164,25 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 		<h2 id="proba">Peer Reviewed Papers</h2>
 		
 			<ul style="list-style-type: disc;">
+
+			
+				<li>L. Škrlj, A. Andrijašević, M. Čulina, <strong>S. Ljubic</strong>:<br/>
+					<em>TINRELIEF: Mobile Application for Tinnitus Sound Therapy.</em><br/>
+					In: Proc. 4th International Conference on Innovations in Computing Research (ICR'25)<br/>
+					Lecture Notes in Networks and Systems 1487 (2025), pp. 408-419.</br>
+						<ul style="list-style-type: circle;">
+						<li> 
+							<a href="#" onclick="return false;" class="ketchup tooltip" 
+										title="<strong>TINRELIEF: Mobile Application for Tinnitus Sound Therapy</strong><br/><br/>
+												This paper presents an original mobile application for tinnitus sound therapy based on standard audiological diagnostic protocols and a recognized treatment method. The application comprises three main modules: audiometric tests with audiogram display, detection of tinnitus determinants, and sound filtering-based tinnitus therapy. In addition, a standardized questionnaire is included, allowing continuous monitoring of the effects of tinnitus on the patient’s quality of life. The entire system built around this mobile application serves as a proof-of-concept for an m-health solution designed to raise awareness of hearing health and provide appropriate on-the-go support. All use cases covered in the application follow standard clinical practice to ensure that real-world diagnostic and treatment scenarios are closely replicated. The proposed system thus provides the ability to quickly test for tinnitus-related health problems and enables personalized, continuous support through sound therapy.">
+								abstract
+							</a>
+							|
+							<a href="https://doi.org/10.1007/978-3-031-95652-2_35" target="_blank">doi</a> 
+						</li>
+						</ul>
+				</li>
+				
 			
 			
 				<li>A. Salkanovic, D. Sušanj, L. Batistic, <strong>S. Ljubic</strong>:<br/>
