--- a/publications.html
+++ b/publications.html
@@ -166,6 +166,24 @@ $(this).next("li.menu_body").slideDown(500).siblings("li.menu_body").slideUp("sl
 			<ul style="list-style-type: disc;">
 			
 			
+				<li>L. Batistic, <strong>S. Ljubic</strong>, K. Griparic, D. Sušanj:<br/>
+				<em>Comparison of Image-Based Deep Learning Classification Models for Motor Imagery EEG Signals.</em><br/>
+				In: Proc. 2025 MIPRO 48th ICT and Electronics Convention. MIPRO, Rijeka/Opatija, Croatia, 2025, pp. 174-179.</br>
+					<ul style="list-style-type: circle;">
+					<li>
+						<a href="#" onclick="return false;" class="ketchup tooltip" 
+									title="<strong>Comparison of Image-Based Deep Learning Classification Models for Motor Imagery EEG Signals</strong><br/><br/>
+											Motor impairments significantly impact individuals' lives, prompting researchers to develop technologies like brain-computer interfaces (BCIs) that utilize electroencephalography (EEG) to restore or replace lost abilities. This research investigates the use of image representations derived from EEG signals for classifying motor imagery (MI) signals recorded via EEG-based BCI. MI is a key technique for BCI control, enabling users to imagine movements to interact with devices. Traditional MI classification often relies on analyzing EEG signals directly. This study explores a different approach by transforming EEG data into images and leveraging advanced neural network architectures, inspired by successes in image recognition. The research systematically evaluates different neural network architectures to identify the most effective method for accurate MI classification. Furthermore, the study will assess the generalizability of the proposed approach by applying it to two datasets.">
+							abstract
+						</a>
+						|	
+						<a href="https://doi.org/10.1109/MIPRO65660.2025.11131782" target="_blank">doi</a>
+					</li>
+					</ul>
+				</li>
+			
+			
+			
 				<li>A. Salkanovic, D. Sušanj, L. Batistic, <strong>S. Ljubic</strong>:<br/>
 					<em>Beyond Signatures: Leveraging Sensor Fusion for Contextual Handwriting Recognition.</em><br/>
 					Sensors 2025, 25(7), 2290, pp. 1-29.<br/>
